unpackaged/main/default/objects/pse__Proj__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (Account Id)</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>