unpackaged/main/default/objects/pse__Proj__c/fields/Blended_Rate__c.field-meta.xml
<CustomField>
    <fullName>Blended_Rate__c</fullName>
    <description>"Planned Days" * "Bookings" field on project</description>
    <formula>Planned_Days__c *  pse__Bookings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>"Planned Days" * "Bookings" field on project</inlineHelpText>
    <label>Blended Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>