unpackaged/main/default/objects/pse__Proj__c/fields/Client_Prospect_Internal__c.field-meta.xml
<CustomField>
    <fullName>Client_Prospect_Internal__c</fullName>
    <label>Client/Prospect/Internal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>