unpackaged/main/default/objects/pse__Proj__c/fields/Current_Proposed_Environment__c.field-meta.xml
<CustomField>
    <fullName>Current_Proposed_Environment__c</fullName>
    <label>Current Proposed Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hosted</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>