unpackaged/main/default/objects/pse__Proj__c/fields/Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Type__c</fullName>
    <label>Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>