unpackaged/main/default/objects/pse__Proj__c/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Director</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Contact.pse__Resource_Role__c</field>
            <operation>equals</operation>
            <value>Director</value>
        </filterItems>
        <filterItems>
            <field>Contact.pse__Resource_Role__c</field>
            <operation>equals</operation>
            <value>Regional Lead</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Director)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>