unpackaged/main/default/objects/pse__Proj__c/fields/Director_Owner__c.field-meta.xml
<CustomField>
    <fullName>Director_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Director Owner)</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>