unpackaged/main/default/objects/pse__Proj__c/fields/ERP_Time_Delay__c.field-meta.xml
<CustomField>
    <fullName>ERP_Time_Delay__c</fullName>
    <description>Field used to delay the ERP message creating Dimension 4 records by 1 minute. This is triggered by Process builder and avoids salesforce platform limits</description>
    <formula>NOW()-((1/1440)*59)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FDN Time Delay</label>
    <type>DateTime</type>
</CustomField>