unpackaged/main/default/objects/pse__Proj__c/fields/Estimated_Project_Duration__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Project_Duration__c</fullName>
    <label>Estimated Project Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>0-2 weeks</fullName>
            </value>
            <value>
                <fullName>2-4 weeks</fullName>
            </value>
            <value>
                <fullName>4-6 weeks</fullName>
            </value>
            <value>
                <fullName>2 months</fullName>
            </value>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>4 months</fullName>
            </value>
            <value>
                <fullName>5 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>7 months</fullName>
            </value>
            <value>
                <fullName>8 months</fullName>
            </value>
            <value>
                <fullName>9 months</fullName>
            </value>
            <value>
                <fullName>&gt;9 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>