unpackaged/main/default/objects/pse__Proj__c/fields/FFX_Budget_Complete__c.field-meta.xml
<CustomField>
    <fullName>FFX_Budget_Complete__c</fullName>
    <formula>IF( pse__Bookings__c&gt;0, pse__Billings__c/ pse__Bookings__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget % Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>