unpackaged/main/default/objects/pse__Proj__c/fields/FFX_Expense_Notification__c.field-meta.xml
<CustomField>
    <fullName>FFX_Expense_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expense Notification</label>
    <type>Checkbox</type>
</CustomField>