unpackaged/main/default/objects/pse__Proj__c/fields/FFX_MarginPercent__c.field-meta.xml
<CustomField>
    <fullName>FFX_MarginPercent__c</fullName>
    <formula>IF(pse__Billings__c = 0, 0, (( pse__Billings__c - pse__Total_Costs__c )/pse__Billings__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>