unpackaged/main/default/objects/pse__Proj__c/fields/FFX_Percent_Complete_Hours__c.field-meta.xml
<CustomField>
    <fullName>FFX_Percent_Complete_Hours__c</fullName>
    <formula>IF(pse__Planned_Hours__c &gt; 0, ( pse__Billable_Internal_Hours__c + pse__Billable_External_Hours__c ) / pse__Planned_Hours__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Complete (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>