unpackaged/main/default/objects/pse__Proj__c/fields/FFX_PSR_OverallProjectStatus__c.field-meta.xml
<CustomField>
    <fullName>FFX_PSR_OverallProjectStatus__c</fullName>
    <label>PSR Overall Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
                <label>Amber</label>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>