unpackaged/main/default/objects/pse__Proj__c/fields/FFX_PSR_StatusSegment__c.field-meta.xml
<CustomField>
    <fullName>FFX_PSR_StatusSegment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Tick if the Project Status Report should include the Project Status Segment</description>
    <label>PSR Status Segment</label>
    <type>Checkbox</type>
</CustomField>