unpackaged/main/default/objects/pse__Proj__c/fields/FFX_Status_Report_Week_Ending__c.field-meta.xml
<CustomField>
    <fullName>FFX_Status_Report_Week_Ending__c</fullName>
    <label>Status Report Week Ending</label>
    <type>Date</type>
</CustomField>