unpackaged/main/default/objects/pse__Proj__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <label>ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>