unpackaged/main/default/objects/pse__Proj__c/fields/Latest_Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Latest_Project_Status__c</fullName>
    <label>Latest Project Status</label>
    <summarizedField>psa_Project_Status__c.psa_Project_Status_Date__c</summarizedField>
    <summaryFilterItems>
        <field>psa_Project_Status__c.psa_Status_Type__c</field>
        <operation>equals</operation>
        <value>External</value>
    </summaryFilterItems>
    <summaryForeignKey>psa_Project_Status__c.psa_Project__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>