unpackaged/main/default/objects/pse__Proj__c/fields/Location_of_Services__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Services__c</fullName>
    <label>Location of Services</label>
    <length>250</length>
    <type>Text</type>
</CustomField>