unpackaged/main/default/objects/pse__Proj__c/fields/msg_link_PSAD4_errors__c.field-meta.xml
<CustomField>
    <fullName>msg_link_PSAD4_errors__c</fullName>
    <label>FDN Errors</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>