unpackaged/main/default/objects/pse__Proj__c/fields/Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status__c</fullName>
    <label>Opportunity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>