unpackaged/main/default/objects/pse__Proj__c/fields/Pipeline_Stage__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Stage__c</fullName>
    <label>Pipeline Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Early Stage, Not qualified</fullName>
                <default>true</default>
                <label>Early Stage, Not qualified</label>
            </value>
            <value>
                <fullName>Qualified, Preferred vendor</fullName>
            </value>
            <value>
                <fullName>Estimated, contractual negotiations moving smoothly</fullName>
            </value>
            <value>
                <fullName>Final Versions of contracts, no real hurdles</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>