unpackaged/main/default/objects/pse__Proj__c/fields/Planned_Days__c.field-meta.xml
<CustomField>
    <fullName>Planned_Days__c</fullName>
    <label>Planned Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>