unpackaged/main/default/objects/pse__Proj__c/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <label>Preferred Language</label>
    <length>250</length>
    <type>Text</type>
</CustomField>