unpackaged/main/default/objects/pse__Proj__c/fields/Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Status__c</fullName>
    <label>Previous Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
                <label>Amber</label>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>