unpackaged/main/default/objects/pse__Proj__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <defaultValue>0.25</defaultValue>
    <description>Probability of closing the deal based on pipeline project stage</description>
    <inlineHelpText>Probability of closing the deal based on pipeline project stage</inlineHelpText>
    <label>Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>