unpackaged/main/default/objects/pse__Proj__c/fields/Projects_Director_Owner__c.field-meta.xml
<CustomField>
    <fullName>Projects_Director_Owner__c</fullName>
    <description>The date that the proposal is due.</description>
    <inlineHelpText>The date that the proposal is due.</inlineHelpText>
    <label>Projects (Director Owner)</label>
    <type>Date</type>
</CustomField>