unpackaged/main/default/objects/pse__Proj__c/fields/ProjectStatusReport_BudgetsSegment__c.field-meta.xml
<CustomField>
    <fullName>ProjectStatusReport_BudgetsSegment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>PSR Budgets Segment</label>
    <type>Checkbox</type>
</CustomField>