unpackaged/main/default/objects/pse__Proj__c/fields/ProjectStatusReport_FinancialsStatus__c.field-meta.xml
<CustomField>
    <fullName>ProjectStatusReport_FinancialsStatus__c</fullName>
    <inlineHelpText>Please enter the financial status of the project for this week's ending date for inclusion in the weekly status report.</inlineHelpText>
    <label>PSR Financials Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
                <label>Amber</label>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>