unpackaged/main/default/objects/pse__Proj__c/fields/ProjectStatusReport_IssuesSegment__c.field-meta.xml
<CustomField>
    <fullName>ProjectStatusReport_IssuesSegment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PSR Issues Segment</label>
    <type>Checkbox</type>
</CustomField>