unpackaged/main/default/objects/pse__Proj__c/fields/ProjectStatusReport_Project_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>ProjectStatusReport_Project_Status_Notes__c</fullName>
    <label>PSR Project Status Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>