unpackaged/main/default/objects/pse__Proj__c/fields/ProjectStatusReport_ProjectFundRemaining__c.field-meta.xml
<CustomField>
    <fullName>ProjectStatusReport_ProjectFundRemaining__c</fullName>
    <formula>pse__Bookings__c - pse__Billings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSR Project Funds Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>