unpackaged/main/default/objects/pse__Proj__c/fields/ProjectStatusReport_RiskSegment__c.field-meta.xml
<CustomField>
    <fullName>ProjectStatusReport_RiskSegment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PSR Risks Segment</label>
    <type>Checkbox</type>
</CustomField>