unpackaged/main/default/objects/pse__Proj__c/fields/ProjectStatusReport_TasksSegment__c.field-meta.xml
<CustomField>
    <fullName>ProjectStatusReport_TasksSegment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PSR Tasks Segment</label>
    <type>Checkbox</type>
</CustomField>