unpackaged/main/default/objects/pse__Proj__c/fields/ProjectStatusReport_TimeBillSegment__c.field-meta.xml
<CustomField>
    <fullName>ProjectStatusReport_TimeBillSegment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>PSR Timecard Billable Segment</label>
    <type>Checkbox</type>
</CustomField>