unpackaged/main/default/objects/pse__Proj__c/fields/ProjectStatusReport_TimecardsAllSegment__c.field-meta.xml
<CustomField>
    <fullName>ProjectStatusReport_TimecardsAllSegment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PSR Timecards ALL Segment</label>
    <type>Checkbox</type>
</CustomField>