unpackaged/main/default/objects/pse__Proj__c/fields/psa_As_of_date_for_report_run__c.field-meta.xml
<CustomField>
    <fullName>psa_As_of_date_for_report_run__c</fullName>
    <label>As of date for report run</label>
    <type>Date</type>
</CustomField>