unpackaged/main/default/objects/pse__Proj__c/fields/psa_Customer_PO_Approved__c.field-meta.xml
<CustomField>
    <fullName>psa_Customer_PO_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate a Customer Order has been approved and is checked as part of the Project Record Type change Validation Rule.</description>
    <label>Customer PO Approved?</label>
    <type>Checkbox</type>
</CustomField>