unpackaged/main/default/objects/pse__Proj__c/fields/psa_Delivered_Status__c.field-meta.xml
<CustomField>
    <fullName>psa_Delivered_Status__c</fullName>
    <label>Delivered Status</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>