unpackaged/main/default/objects/pse__Proj__c/fields/psa_Deployment_Type__c.field-meta.xml
<CustomField>
    <fullName>psa_Deployment_Type__c</fullName>
    <label>Deployment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hosted</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>