unpackaged/main/default/objects/pse__Proj__c/fields/psa_Director_is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>psa_Director_is_Current_User__c</fullName>
    <formula>Director__r.pse__Salesforce_User__r.Id = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Director is Current User</label>
    <type>Checkbox</type>
</CustomField>