unpackaged/main/default/objects/pse__Proj__c/fields/psa_Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>psa_Engagement_Type__c</fullName>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phase 1</fullName>
            </value>
            <value>
                <fullName>Phase 2+</fullName>
            </value>
            <value>
                <fullName>Best Practice Review</fullName>
            </value>
            <value>
                <fullName>Ad-hoc Consulting</fullName>
            </value>
            <value>
                <fullName>Staff Augmentation</fullName>
            </value>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Upgrade Assistance</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>