unpackaged/main/default/objects/pse__Proj__c/fields/psa_Forthcoming_Activities__c.field-meta.xml
<CustomField>
    <fullName>psa_Forthcoming_Activities__c</fullName>
    <label>Forthcoming Activities</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>