unpackaged/main/default/objects/pse__Proj__c/fields/psa_Overall_RAG_Commentary__c.field-meta.xml
<CustomField>
    <fullName>psa_Overall_RAG_Commentary__c</fullName>
    <label>Overall RAG Commentary</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>