unpackaged/main/default/objects/pse__Proj__c/fields/psa_Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>psa_Preferred_Language__c</fullName>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Danish</fullName>
            </value>
            <value>
                <fullName>Dutch</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Hindi/Urdu</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Mandarin</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>