unpackaged/main/default/objects/pse__Proj__c/fields/PSA_Project_RAG_Commentary__c.field-meta.xml
<CustomField>
    <fullName>PSA_Project_RAG_Commentary__c</fullName>
    <label>Project RAG Commentary</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>